# Algorithm-Engineering-Course

./: .gitignore  .gitmodules  README.md
answers/EA1/: ea1.docx  pi_monte_carlo.cpp
answers/EA10/: ea10.docx
answers/EA11/: ea11_1.md  ea11_2.md
answers/EA12/: ea12.md
answers/EA2/: ea2.docx  pi_numerical_integration.cpp
answers/EA3/: ea3.docx  monte_carlo_pi_modified.cpp
answers/EA3/coding warmup/: mandelbrot_parallel.cpp
answers/EA4/: benchmark_plot.py  benchmark_results.csv  ea4.docx  min_max_quicksort_modified.cpp
answers/EA5/fizzbuzz/: CMakeLists.txt
answers/EA5/fizzbuzz/src/: CMakeLists.txt  fizzbuzz.cpp  fizzbuzz.h
answers/EA5/fizzbuzz/tests/: CMakeLists.txt  test_fizzbuzz.cpp
answers/EA5/quantpng/: CMakeLists.txt
answers/EA5/quantpng/lodepng/: CMakeLists.txt
answers/EA5/quantpng/quantize/: CMakeLists.txt
answers/EA6/: ea6.docx
answers/EA7/: ea7.docx
answers/EA8/: ea8.docx
answers/EA9/: ea9.docx
project/: CMakeLists.txt  TASKS.md  TEST.txt  image_utils.cpp  image_utils.h  main.cpp
project/include/: adaptive_median_filter.h  image_utils.h
project/include/binarization/: adaptive_thresholding.h  integral_binarization.h  thresholding.h
project/include/filters/: adaptive_median_filter.h
project/include/utils/: image_io.h
project/src/: adaptive_median_filter.cpp  image_utils.cpp  main.cpp
project/src/binarization/: adaptive_thresholding.cpp  integral_binarization.cpp  thresholding.cpp
project/src/filters/: adaptive_median_filter.cpp
project/src/utils/: image_io.cpp
